# mdcast

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  PROJECT_PLAN.md  README.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
embedded/filters/: .keep
embedded/reference/: .keep  reference.docx  reference.odt  reference.pptx
embedded/revealjs/: .keep
embedded/typst/layouts/pdf/: callout.typ  content.typ  hero.typ  image-full.typ  section-divider.typ  thanks.typ
embedded/typst/layouts/pdf-presentation/: callout.typ  content.typ  hero.typ  image-full.typ  section-divider.typ  thanks.typ
examples/: dump_pandoc_input.rs  dump_typst_driver.rs
src/: assets.rs  brand.rs  frontmatter.rs  image_format.rs  images.rs  lib.rs  mermaid.rs  preprocessor.rs
src/backends/: mod.rs  pandoc.rs  pandoc_tests.rs  pptx_autofit.rs  pptx_autofit_tests.rs  reveal_assets.rs  reveal_brand.rs  reveal_brand_tests.rs  typst.rs
src/backends/typst/: context.rs  fonts.rs  markdown.rs  mod.rs  template.rs  virtual_files.rs
src/backends/typst/markdown/: mod.rs  table.rs  tests.rs
src/images/: mod.rs  tests.rs
src/pages/: auto.rs  mod.rs  splitter.rs  splitter_tests.rs
tests/: async_provider.rs  cover_deck_classification.rs  mermaid_render.rs  remote_images.rs  render_smoke.rs  render_to_bytes.rs  typst_fonts.rs  typst_template.rs  typst_template_html.rs  typst_unresolved_image.rs
tests/common/: mod.rs
tests/golden/: cover-deck.md  readme-example.md
