[package]
name = "mdcast"
version = "0.1.0"
edition = "2024"
description = "Markdown → DOCX/ODT/PDF/PPTX/HTML-reveal with per-page layout templates, powered by pandoc and typst"
license = "MIT OR Apache-2.0"
authors = ["Martin Miksanik <miksanik@gmail.com>"]
readme = "README.md"
repository = "https://github.com/xmiksay/mdcast"
homepage = "https://github.com/xmiksay/mdcast"
documentation = "https://docs.rs/mdcast"
keywords = ["markdown", "pandoc", "typst", "slides", "document"]
categories = ["text-processing", "template-engine", "command-line-utilities"]
exclude = [
    ".claude/",
    "PROJECT_PLAN.md",
    "examples/dump_pandoc_input.rs",
    "examples/dump_typst_driver.rs",
]

[features]
default = ["pandoc", "typst"]
pandoc = []
typst = ["dep:typst", "dep:typst-pdf", "dep:typst-as-lib"]

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
pulldown-cmark = { version = "0.13", default-features = false }
regex = "1"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typst = { version = "0.14", optional = true }
typst-pdf = { version = "0.14", optional = true }
typst-as-lib = { version = "0.15", optional = true, features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[[bin]]
name = "mdcast"
path = "src/bin/mdcast.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
