[package]
name = "mdcast"
version = "0.2.0"
edition = "2024"
description = "Markdown → DOCX/ODT/PDF/PPTX/HTML-reveal with per-page layout templates, powered by pandoc and typst"
license = "MIT OR Apache-2.0"
authors = ["Martin Miksanik <miksanik@gmail.com>"]
readme = "README.md"
repository = "https://github.com/xmiksay/mdcast"
homepage = "https://github.com/xmiksay/mdcast"
documentation = "https://docs.rs/mdcast"
keywords = ["markdown", "pandoc", "typst", "slides", "document"]
categories = ["text-processing", "template-engine", "command-line-utilities"]
exclude = [
    ".claude/",
    "PROJECT_PLAN.md",
    "examples/dump_pandoc_input.rs",
    "examples/dump_typst_driver.rs",
]

[features]
default = ["pandoc", "typst", "rt-multi-thread"]
pandoc = ["dep:zip", "dep:quick-xml"]
typst = ["dep:typst", "dep:typst-pdf", "dep:typst-as-lib", "dep:serde_json"]
# Experimental HTML export for `render_template` (issue #53). Off by default:
# pulls in `typst-html` and flips `typst::Feature::Html` on for every
# `TypstEngine` in the process (typst-as-lib's `typst-html` feature is a
# compile-time toggle on the whole library, not a per-engine option).
typst-html = ["typst", "dep:typst-html", "typst-as-lib/typst-html"]
# Multi-threaded tokio runtime, needed by the `mdcast` binary's #[tokio::main].
# Library-only consumers can disable default-features to drop it.
rt-multi-thread = ["tokio/rt-multi-thread"]
# Fetch http(s) image URLs found in markdown through `images::collect_images`
# instead of leaving them for pandoc to fetch on its own (or, on the typst
# path, dropping them with a warning — see issue #54). Off by default: no new
# dependency, byte-identical output for documents without remote images.
remote-images = ["dep:reqwest"]

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
pulldown-cmark = { version = "0.13", default-features = false }
quick-xml = { version = "0.41", optional = true }
regex = "1"
reqwest = { version = "0.12", optional = true, default-features = false, features = [
    "rustls-tls",
] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
tempfile = "3"
tokio = { version = "1", features = ["fs", "process", "rt", "macros", "time", "io-util"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typst = { version = "0.14", optional = true }
typst-pdf = { version = "0.14", optional = true }
typst-html = { version = "0.14", optional = true }
typst-as-lib = { version = "0.15", optional = true, features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[[bin]]
name = "mdcast"
path = "src/bin/mdcast/main.rs"
required-features = ["rt-multi-thread"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
